feat: apolloサーバを設定した。

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,9 @@
   },
   "homepage": "https://github.com/TakedaTakumi/GraphQL_Sequelize_Sample#readme",
   "dependencies": {
-    "express": "^4.17.1",
+    "apollo-server": "^3.3.0",
+    "bcryptjs": "^2.4.3",
+    "graphql": "^15.5.1",
     "sequelize": "^6.6.5",
     "sequelize-cli": "^6.2.0",
     "sqlite3": "^5.0.2"
